# molehill

./: .clangd  .gitignore  .pylintrc  1.out  2.out  CMakeLists.txt  Pipfile  README.md  all.sh  benchmark.sh  benchmark_results.data  build-requirements.txt  build.py  comparison.xml  comparison2.xml  comparison_cost.xml  comparison_prob0.xml  comparison_robust.xml  comparison_robust_trees.xml  comparison_robust_trees_brute.xml  comparison_simple.xml  comparison_simple_exact.xml  comparison_trees.xml  comparison_treesnog.xml  files.txt  maze.dot  mdp.dot  mdp_holes.dot  mdp_holes_0.dot  mdp_holes_1.dot  mdp_nondet.dot  mdp_paynt.dot  minimal.xml  model.dot  molehill.smt2  mtbdd.dot  new_mdp.dot  out.dot  out.json  out.txt  (+13 more)
benchmarks/: create_benchmark.py  create_benchmarks.sh  sat.yml  tablegenerator.xml  unknown.yml  unsat.yml
cmake/: include_pybind11.cmake
dots/: counterexample_{M_0_1: 2, P_0_1: 3, P_1_1: 0, M_1_1: 1, M_3_1: 1, P_2_1: 0}_2.dot  counterexample_{M_0_1: 2, P_0_1: 3, P_1_1: 0, M_1_1: 1, M_3_1: 1, P_2_1: 0}_3.dot  counterexample_{M_0_1: 2, P_0_1: 3, P_1_1: 0, M_1_1: 1, M_3_1: 1, P_2_1: 0}_4.dot  counterexample_{M_0_1: 2, P_0_1: 3, P_1_1: 0, M_1_1: 1, M_3_1: 1, P_2_1: 0}_6.dot  counterexample_{M_0_1: 2, P_0_1: 3, P_1_1: 0, M_1_1: 1, P_3_1: 0, M_3_1: 0, P_2_1: 0}_2.dot  counterexample_{M_0_1: 2, P_0_1: 3, P_1_1: 0, M_1_1: 1, P_3_1: 0, M_3_1: 0, P_2_1: 0}_5.dot  counterexample_{M_0_1: 2, P_0_1: 3, P_1_1: 0, M_1_1: 1, P_3_1: 0, M_3_1: 1, P_2_1: 1}_2.dot  counterexample_{M_0_1: 2, P_0_1: 3, P_1_1: 0, M_1_1: 1, P_3_1: 0, M_3_1: 1, P_2_1: 1}_3.dot  counterexample_{M_2_1: 0, P_2_1: 0}_3.dot  counterexample_{M_2_1: 0, P_2_1: 3}_3.dot  counterexample_{M_2_1: 2, P_0_1: 0, P_3_1: 0, P_1_1: 0, P_2_1: 2}_0.dot  counterexample_{M_2_1: 2, P_0_1: 0, P_3_1: 0, P_1_1: 0, P_2_1: 2}_2.dot  counterexample_{M_2_1: 2, P_0_1: 0, P_3_1: 0, P_1_1: 0, P_2_1: 2}_3.dot  counterexample_{M_2_1: 2, P_0_1: 2, P_2_1: 2}_2.dot  counterexample_{M_2_1: 2, P_0_1: 2, P_2_1: 2}_4.dot  counterexample_{M_2_1: 2, P_0_1: 2, P_2_1: 3}_2.dot  counterexample_{M_2_1: 2, P_0_1: 2, P_2_1: 3}_3.dot  counterexample_{M_2_1: 3, P_0_1: 0, P_2_1: 0, P_1_1: 0, P_3_1: 2}_0.dot  counterexample_{M_2_1: 3, P_0_1: 0, P_2_1: 0, P_1_1: 0, P_3_1: 2}_1.dot  counterexample_{M_2_1: 3, P_0_1: 0, P_2_1: 0, P_1_1: 0, P_3_1: 2}_3.dot  counterexample_{M_2_1: 3, P_0_1: 0, P_2_1: 0, P_1_1: 0, P_3_1: 2}_4.dot  counterexample_{M_2_1: 3, P_2_1: 2, P_0_1: 2}_2.dot  counterexample_{M_2_1: 3, P_2_1: 2, P_0_1: 2}_4.dot  counterexample_{M_2_1: 3, P_2_1: 2, P_0_1: 3}_2.dot  counterexample_{M_2_1: 3, P_2_1: 2, P_0_1: 3}_4.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_1_1: 1, P_3_1: 2}_0.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_1_1: 1, P_3_1: 2}_1.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_1_1: 1, P_3_1: 2}_3.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_1_1: 1, P_3_1: 2}_4.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_1_1: 1, P_3_1: 3}_0.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_1_1: 1, P_3_1: 3}_1.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_1_1: 1, P_3_1: 3}_3.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_1_1: 1, P_3_1: 3}_4.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_1_1: 2, P_3_1: 3}_0.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_1_1: 2, P_3_1: 3}_1.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_1_1: 2, P_3_1: 3}_3.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_1_1: 2, P_3_1: 3}_4.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_3_1: 1, P_1_1: 1}_0.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_3_1: 1, P_1_1: 1}_1.dot  counterexample_{P_0_1: 0, M_2_1: 1, P_2_1: 0, P_3_1: 1, P_1_1: 1}_3.dot  (+283 more)
mdpcegis/: __init__.py  bincover.py  counterexamples.py  curve_drawer.py  cvc5.py  graveyard.txt  matrix_generator.py  model_counters.py  plugin.py  simple_plugin.py
misc/: columns.xml  constrained_benchmark.py  find_smallest_tree.py  find_smallest_tree_lra.py  find_smallest_tree_paynt.py  find_smallest_tree_robust.py  find_smallest_tree_robust_lra.py
molehill/: __init__.py  __main__.py  bandit.py  counterexample_strategy.py  counterexamples.py  curve_drawer.py  decision_tree.py  matrix_generator.py  model_counters.py  modelchecker.py  mole.py  plugin.py  pure_smt.py  synthesis.py
pictures/: tree.dot
resources/: mdp.prism  sketch.props  sketch.templ
results/: comparison.2025-02-11_12-37-22.results.txt  comparison.2025-02-11_12-38-12.results.Molehill.xml.bz2  comparison.2025-02-11_12-38-12.results.Paynt-AR.xml.bz2  comparison.2025-02-11_12-38-12.results.Paynt-CEGIS.xml.bz2  comparison.2025-02-11_12-38-12.results.Paynt-Hybrid.xml.bz2  comparison.2025-02-11_12-38-12.results.txt  comparison.2025-02-11_12-40-40.results.Molehill.xml.bz2  comparison.2025-02-11_12-40-40.results.txt  comparison.2025-02-11_14-21-43.results.Molehill.xml.bz2  comparison.2025-02-11_14-21-43.results.Paynt-AR.xml.bz2  comparison.2025-02-11_14-21-43.results.Paynt-CEGIS.xml.bz2  comparison.2025-02-11_14-21-43.results.Paynt-Hybrid.xml.bz2  comparison.2025-02-11_14-21-43.results.txt  comparison.2025-02-12_14-44-23.results.Molehill.xml  comparison.2025-02-12_14-44-23.results.txt  comparison.2025-02-13_11-20-47.results.Molehill.xml.bz2  comparison.2025-02-13_11-20-47.results.Paynt-AR.xml.bz2  comparison.2025-02-13_11-20-47.results.Paynt-CEGIS.xml.bz2  comparison.2025-02-13_11-20-47.results.Paynt-Hybrid.xml.bz2  comparison.2025-02-13_11-20-47.results.txt  comparison.2025-02-13_11-54-04.results.Molehill (No CE).xml.bz2  comparison.2025-02-13_11-54-04.results.Molehill (only MC-CE).xml.bz2  comparison.2025-02-13_11-54-04.results.Molehill.xml.bz2  comparison.2025-02-13_11-54-04.results.Paynt-AR.xml.bz2  comparison.2025-02-13_11-54-04.results.Paynt-CEGIS.xml.bz2  comparison.2025-02-13_11-54-04.results.Paynt-Hybrid.xml.bz2  comparison.2025-02-13_11-54-04.results.txt  comparison.2025-02-19_11-32-17.results.Molehill.SAT Benchmarks.xml.bz2  comparison.2025-02-19_11-32-17.results.Molehill.UNSAT Benchmarks.xml.bz2  comparison.2025-02-19_11-32-17.results.Molehill.xml.bz2  (+29 more)
scripts/: plot.sh  (+1 more)
(+2305 files in other folders)
