[build-system]
requires = ["scikit-build-core", "pybind11", "stormpy>=1.11.1", "paynt>=0.1.0"]
build-backend = "scikit_build_core.build"

[project]
name = "molehill"
description = "Molehill Markov chain searcher"
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "L. Heck", email = "linus.heck@ru.nl" },
    { name = "F. Macák", email = "imacak@fit.vut.cz" },
]
requires-python = ">=3.10"
dependencies = [
    "stormpy>=1.11.1",
    "paynt>=0.1.0",
    "anytree>=2.12.1",
    "coloredlogs>=15.0.1",
    "contourpy>=1.3.1",
    "docopt>=0.6.2",
    "fonttools>=4.56.0",
    "graphviz>=0.20.3",
    "iniconfig>=2.0.0",
    "lxml>=5.3.1",
    "matplotlib>=3.9.3",
    "packaging>=24.2",
    "pillow>=11.1.0",
    "pluggy>=1.5.0",
    "psutil>=6.1.0",
    "py-cpuinfo>=9.0.0",
    "pykwalify>=1.8.0",
    "pyparsing>=3.2.1",
    "python-dateutil>=2.9.0.post0",
    "six>=1.17.0",
    "z3-solver>=4.15.3.0",
    "mercury-settrie>=1.5.1",
    "dot2tex>=2.11.3",
    "tabulate>=0.9.0",
]
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
keywords = [
    "stormpy", 
    "paynt", 
    "storm",
]

[project.urls]
Homepage = "https://github.com/linusheck/molehill"

[project.optional-dependencies]
numpy = [
    "numpy"
]
plot = [
    "matplotlib",
    "numpy",
    "scipy",
]
dev = [
    # Formatting
    "black[jupyter]",
]
test = [
    "pytest",
    "nbval",
    "numpy",
]

[tool.scikit-build]
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
cmake.args = []
wheel.packages = ["molehill"]

[tool.scikit-build.cmake.define]
STORM_DIR_HINT=""
ALLOW_STORM_SYSTEM="ON"
ALLOW_STORM_FETCH="ON"
STORM_GIT_REPO="https://github.com/moves-rwth/storm.git"
STORM_GIT_TAG="master"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "molehill/_version.py"

[tool.black]
line-length = 160

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--nbval"
testpaths = [
    "tests",
]
python_files = [
    "test*.py",
]
python_functions = [
    "*_test",
    "test_*",
]